fix build header alignment

--- a/app/styles/app/main/repository.sass
+++ b/app/styles/app/main/repository.sass
@@ -87,8 +87,9 @@
       display: inline-block
     .github-icon
       display: inline-block
-      top: 9px
+      top: 12px
+      margin-right: 1em
     .status-image
       display: inline-block
-      top: 9px
+      top: 12px
 
