--- a/app/styles/app/main/tools.sass
+++ b/app/styles/app/main/tools.sass
@@ -12,7 +12,7 @@
   & > a.menu-popup-button
     display: inline-block
     text-align: left
-    margin-top: -32px
+    margin-top: -37px
     color: #fff
     font-size: 13px
     padding: 4px 24px 3px 25px
@@ -36,7 +36,7 @@
     display: none
     position: absolute
     right: 0
-    top: -4px
+    top: -9px
     width: 140px
     background-color: #a6adad
     a
